--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -14,3 +14,13 @@ body {
 a {
   text-decoration: none;
 }
+
+section#articles {
+  margin-top: 4rem;
+  max-width: 1240px;
+  padding: 0 2rem;
+  margin: 4rem auto;
+  display: flex;
+  flex-direction: column;
+  gap: 46px;
+}
